--- a/css/main.css
+++ b/css/main.css
@@ -88,14 +88,14 @@ hr.small {
 .sidebar-nav {
     position: absolute;
     top: 0;
-    width: 250px;
+    width: 150px;
     margin: 0;
     padding: 0;
     list-style: none;
 }
 
 .sidebar-nav li {
-    text-indent: 20px;
+    text-align: center;
     line-height: 40px;
 }
 
@@ -139,8 +139,8 @@ hr.small {
 }
 
 #sidebar-wrapper.active {
-    right: 250px;
-    width: 250px;
+    right: 200px;
+    width: 200px;
     -webkit-transition: all 0.4s ease 0s;
     -moz-transition: all 0.4s ease 0s;
     -ms-transition: all 0.4s ease 0s;
@@ -212,11 +212,14 @@ hr.small {
 }
 
 /* Contact */
-.contact {
-    background-color: white;
-    padding: 50px 0;
-    width: 100% auto;
-    height: 100% auto;
+.contacts {
+    background: url(../img/christian-joudrey-89399-unsplash.jpg) no-repeat center center scroll;
+    height: 100%;
+    width: 100%;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
 }
 
 .btnsubmit {
@@ -224,7 +227,6 @@ hr.small {
 }
 
 /* Footer */
-
-footer {
-    padding: 0 0 10px 0;
+footer{
+    padding: 0;
 }
